update form; input field no longer shifts back into the text field; remains poised above input field

--- a/src/components/form-input/form-input.styles.scss
+++ b/src/components/form-input/form-input.styles.scss
@@ -11,7 +11,7 @@ $main-color: black;
   position: relative;
   margin: 45px 0;
 
-  .form-input {
+  .form-input{
     background: none;
     background-color: white;
     color: $sub-color;
@@ -27,10 +27,12 @@ $main-color: black;
     &:focus {
       outline: none;
     }
+  }
 
-    &:focus ~ .form-input-label active{
+  .form-input:not(:placeholder-shown) + .form-input-label {
+    
       @include shrinkLabel();
-    }
+    
   }
 
   input[type='password'] {
@@ -45,9 +47,9 @@ $main-color: black;
     pointer-events: none;
     left: 5px;
     top: 10px;
-    transition: 300ms ;
+    transition: 300ms ease all;
 
-    &:shrink label {
+    &:shrink {
       @include shrinkLabel();
     }
   }
